--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=Gruppe2_eksamen
+
+# giver adgang til den valgte database
+spring.datasource.url=jdbc:mysql://localhost:3306/bilabonnementdata?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=1234
+
+# opdatere databasen for hver gang appen køre
+spring.jpa.hibernate.ddl-auto=update
