--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=Gruppe2_eksamen
 # giver adgang til den valgte database
 spring.datasource.url=jdbc:mysql://localhost:3306/bilabonnementdata?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=flmlaan14
+spring.datasource.password=1234
 
 # opdatere databasen for hver gang appen køre
 spring.jpa.hibernate.ddl-auto=update
