--- a/.github/workflows/main_bilabonomant.yml
+++ b/.github/workflows/main_bilabonomant.yml
@@ -50,4 +50,4 @@ jobs:
           app-name: 'BilAbonomant'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: '*.jar'
+          package: './*.jar'
