--- a/.github/workflows/main_bilabonomant.yml
+++ b/.github/workflows/main_bilabonomant.yml
@@ -50,5 +50,6 @@ jobs:
           app-name: 'BilAbonomant'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: '${{ github.workspace }}/target/*.jar'
+          package: '*.jar'
+
 
