--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 spring.application.name=Gruppe2_eksamen
 
 # giver adgang til den valgte database
-spring.datasource.url=jdbc:mysql://localhost:3306/bilabonnementdata?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=1234
+#spring.datasource.url=jdbc:mysql://localhost:3306/bilabonnementdata?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=1234
 
 # opdatere databasen for hver gang appen køre
+#spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:mysql://20.107.171.22:3306/bilabonnementdb
+spring.datasource.username=springuser
+spring.datasource.password=B@b@lh@r@2004
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
