--- a/.github/workflows/main_bilabonomant.yml
+++ b/.github/workflows/main_bilabonomant.yml
@@ -13,7 +13,8 @@ jobs:
       contents: read
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Java version
         uses: actions/setup-java@v4
@@ -21,8 +22,9 @@ jobs:
           java-version: '17'
           distribution: 'microsoft'
 
+      # Dette step bygger .jar-filen og inkluderer HTML-filer (resources/templates)
       - name: Build with Maven (skip tests)
-        run: mvn clean install -DskipTests
+        run: mvn clean package -DskipTests
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -51,5 +53,3 @@ jobs:
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: '*.jar'
-
-
